# pkg/ocp-docs-api/ocp-docs-api.pb.validate.go
@@ -345,11 +345,15 @@ func (m *CreateDocV1Request) Validate() error {
 		return nil
 	}
 
-	// no validation rules for Name
-
-	// no validation rules for Link
-
-	// no validation rules for SourceLink
+	if v, ok := interface{}(m.GetDoc()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return CreateDocV1RequestValidationError{
+				field:  "Doc",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
 
 	return nil
 }
@@ -629,6 +633,8 @@ func (m *UpdateDocV1Request) Validate() error {
 	if m == nil {
 		return nil
 	}
+
+	// no validation rules for Id
 
 	if v, ok := interface{}(m.GetDoc()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
@@ -990,3 +996,73 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = DocValidationError{}
+
+// Validate checks the field values on NewDoc with the rules defined in the
+// proto definition for this message. If any rules are violated, an error is returned.
+func (m *NewDoc) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for Name
+
+	// no validation rules for Link
+
+	// no validation rules for SourceLink
+
+	return nil
+}
+
+// NewDocValidationError is the validation error returned by NewDoc.Validate if
+// the designated constraints aren't met.
+type NewDocValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e NewDocValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e NewDocValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e NewDocValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e NewDocValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e NewDocValidationError) ErrorName() string { return "NewDocValidationError" }
+
+// Error satisfies the builtin error interface
+func (e NewDocValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sNewDoc.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = NewDocValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = NewDocValidationError{}
